fdo#47044: Adapt to different Windows versions' InternetQueryOption behavior

Change-Id: Ia4d1d8f903872e5eefae2d9687866243b9055a13